# acqu

./: CMakeLists.txt  CMakeLists.txt_ROOT6
CaLib/: CMakeLists.txt
CaLib/config/: config_MC_example.cfg
CaLib/include/: TCFileManager.h  TCMySQLManager.h
CaLib/macros/: AddBeamtime.C  AddCalibMC.C
CaLib/src/: MainCaLibManager.cxx  TCCalibEnergy.cxx  TCCalibVetoCorr.cxx  TCFileManager.cxx  TCMySQLManager.cxx
Tools/OSCAR/: CMakeLists.txt
Tools/OSCAR/A2/include/: TOA2DetParticle.h
Tools/OSCAR/A2/src/: TOA2DetParticle.cxx
Tools/OSCAR/utils/include/: TOASCIIReader.h  TOArray2D.h
Tools/a2display/: CMakeLists.txt
Tools/a2display/inc/: a2display.h  cb_numbering.h
Tools/a2display/src/: TH2CB.cpp  TH2TAPS.cpp
acqu_core/: CMakeLists.txt
acqu_core/scripts/: AcquControl  AcquManager  CheckFarm  CheckNeighbourSymmetry.pl  CheckNextNeighbour.pl  GenerateNaINeighbours.pl  GeneratePbWO4Neighbours.pl  daq_status
acqu_user/: CMakeLists.txt  data.2007.07
acqu_user/data.2007.06/: CBelem.h  CBserver.Offline  FP_1508MeV_2007_07_Jan09B.dat.align  NaI_2007_07_Jan09_TW_neu.dat.h  NaI_2007_07_July09_TWE.dat.h  PIDdE_2007_07_Jan09.root  README.md  TAPSVeto.pat  TAPSdEvE_2007_07_FEB09.root  TOFcut2007_07.root  TrigPattern.pat  Trigger.Rate  VETOdEvE_2007_7_FEB09.root  veto.h
acqu_user/data.2013.03/: PID_Droop_Corr_Mar_13.root
acqu_user/data.2014.04/: G_E_Carbon_Apr2014.ods
acqu_user/data.2014.05/: G_E_Butanol_May2014.ods
acqu_user/data.2016.08/: PID_Droop_Corr_Aug_16.root
acqu_user/data.Sigma2x/: CBTaggTAPS.Offline  TAPS_Cut_DeltaE-E_New.root  TAPS_Cut_TOF.root  TaggEff.Offline
acqu_user/data.Sigma2xNew/: Trigger.Pat
acqu_user/data.general/: BaF2-PbWO4.txt  DrawTAPS.C  Veto.txt
acqu_user/data.misc/: CB_NaI.450  TAPS_BaF2-PbWO4.450
acqu_user/data.online/: Detector-FPD1557.dat.NewScIndex  Detector-FPD450.dat.NewScIndex  Detector-FPD883.dat.NewScIndex  Detector-NewFPD.specimen  TaggerHV.txt
cmake/: settings.cmake
(+338 files in other folders)
